--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,14 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 body {
+/*
     height:100vh;
     width:100vw;
+*/
     margin: 0;
     padding: 0;
-    background-color: #1f232a;
+    background-color: rgba(97,151,65,1);
+    color: #fff;
     font-family: 'mr-eaves-xl-modern', sans-serif;
     font-weight: 300; /* book: 300, regular: 400, bold: 700 */
 }
@@ -21,6 +24,7 @@ body {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 #intro {
+    display: none;
     position: fixed;
     top: 0;
     z-index: 10;
@@ -31,10 +35,16 @@ body {
     text-align: center;
     overflow: scroll;
 }
+
+#onboard {
+	display: none;
+}
+#home {
+	display: block;
+}
     h1 {
         margin: 20% 0 0 0;
         color: #b3b4b4;
-        font-family: 'Roboto Condensed', sans-serif;
         font-size: 5em;
         line-height: .9em;
         text-transform: uppercase;
@@ -162,7 +172,6 @@ body {
     h2 {
         text-align: center;
         color: #b3b4b4;
-        font-family: 'Roboto Condensed', sans-serif;
         font-size: 3em;
         margin: 1em;
     }
