--- a/css/styles.css
+++ b/css/styles.css
@@ -3,14 +3,10 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 body {
-/*
-    height:100vh;
-    width:100vw;
-*/
     margin: 0;
     padding: 0;
-    background-color: rgba(97,151,65,1);
-    color: #fff;
+    background-color: #fff;
+    color: #000;
     font-family: 'mr-eaves-xl-modern', sans-serif;
     font-weight: 300; /* book: 300, regular: 400, bold: 700 */
 }
@@ -24,48 +20,65 @@ body {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 #intro {
-    display: none;
-    position: fixed;
-    top: 0;
-    z-index: 10;
     height: 100vh;
-    width: 100vw;
-    padding: 5%;
-    background-color: #1f232a;
+    width: 100%;
     text-align: center;
-    overflow: scroll;
+    background-color: rgba(97,151,65,1);
+    color: #fff;
 }
 
 #onboard {
+    height: 100vh;
+    width: 100%;
+    display: none;
+}
+    #disclaimer {
+        text-align: center;
+        cursor: pointer;
+    }
+    #disclaimerContainer {
+        display: none;
+        height: 100vh;
+        width: 100%;
+    }
+    #gotIt {
+        cursor: pointer;
+    }
+#home {
 	display: none;
 }
-#home {
-	display: block;
-}
-    h1 {
-        margin: 20% 0 0 0;
-        color: #b3b4b4;
-        font-size: 5em;
-        line-height: .9em;
-        text-transform: uppercase;
-    }
-    
 
-/* Loader
+/* About
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+#about {
+	display: none;
+}
+
+
+/* Navigation
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+#nav {
+	display: none;
+}
+
+
+/* Loading
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-#loading {
+#loading,
+#discovering {
     position: fixed;
-    display: none;
     top: 0;
-    z-index: 11;
+    z-index: 1;
     height: 100vh;
     width: 100vw;
-    padding: 5%;
-    background-color: #1f232a;
+    margin-left: -20px;
+    background-color: rgba(97,151,65,1);
+    color: #fff;
     text-align: center;
-    overflow: scroll;
+    display: none;
 }
+    /*To be replaced with new loading animations*/
     #loader {
         position: relative;
         margin: 20% auto 0;
@@ -74,8 +87,8 @@ body {
     }
         #loader1 {
             position: absolute;
-            border: 5px solid #1f232a;
-            border-top: 5px solid #eee;
+            border: 5px solid rgba(97,151,65,1);
+            border-top: 5px solid #fff;
             border-radius: 50%;
             width: 15vh;
             height: 15vh;
@@ -85,14 +98,13 @@ body {
             position: absolute;
             top: 2.5vh;
             left: 2.5vh;
-            border: 5px solid #1f232a;
-            border-top: 5px solid #eee;
+            border: 5px solid rgba(97,151,65,1);
+            border-top: 5px solid #fff;
             border-radius: 50%;
             width: 10vh;
             height: 10vh;
             animation: spinBack 1s linear infinite;
         }
-
     @keyframes spin {
         0% { transform: rotate(0deg); }
         100% { transform: rotate(360deg); }
@@ -102,73 +114,35 @@ body {
         100% { transform: rotate(-360deg); }
     }
 
-
-/* Location search
+/* Select Place
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-#locSearch {
-    position: absolute;
-    bottom: 25vh;
-    width: 100%;
-    z-index: 10;
-    text-align: center;
+#select {
+	display: none;
 }
-    #locQuery,
-    #locSubmit {
-        margin: 0;
-        padding: .4em;
-        border: none;
-        font-family: 'Roboto Condensed', sans-serif;
-        font-size: 1.5em;
-        font-weight: 600;
-    }
-    #locQuery {
-        color: #181b1f;
-        background-color: rgba(255,255,255,.5);
-        text-transform: uppercase;
-    }
-        #locQuery:focus,
-        #locSubmit:focus {
-            outline: none;
-        }
-        ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-          color: #666;
-        }
-        ::-moz-placeholder { /* Firefox 19+ */
-          color: #666;
-        }
-        :-ms-input-placeholder { /* IE 10+ */
-          color: #666;
-        }
-        :-moz-placeholder { /* Firefox 18- */
-          color: #666;
-        }
-    #locSubmit {
-        color: #181b1f;
-        cursor: pointer;
-    }
-        #locSubmit:hover {
-            background-color: #fff;
-        }
-    #locError {
-        width: 100%;
-        margin: 0 0 .5em 0;
-        font-family: 'Roboto', sans-serif;
-        font-size: 1.2em;
-        font-weight: 300;
-        text-align: center;
-        color: red;
-        text-shadow: 0px 0px 1px #000;
-        display: none;
+.place {
+    cursor: pointer;
+}
+    .place:hover {
+        background-color: lightgray;
     }
 
 
-/*  Main
+/*  Results
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 #results {
-    
+    display: none;
 }
+    .results {
+        cursor: pointer;
+    }
+        .results:hover {
+            background-color: lightgray;
+        }
+
+
+
+
     h2 {
         text-align: center;
         color: #b3b4b4;
@@ -202,34 +176,16 @@ body {
             font-style: italic;
         }
 
+/*  Individual Artifacts
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+#flickr {
+    display: none;
+}
+#newspaper {
+    display: none;
+}
+
 
 /* Media queries
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-/* --- for portrait phone --- */
-@media (max-width: 500px) {
-    h1 {
-        font-size: 3em;
-    }
-    
-    /*LOCATION SEARCH*/
-    #locSearch {
-        bottom: 23vh;
-        width: 90%;
-        margin-left: 5%;
-    }    
-    #locQuery {
-        width: 75%;
-    }
-    #locSubmit {
-        width: 25%;
-    }
-}
-
-/* --- for landscape phone --- */
-@media (max-height: 600px) {
-    h1 {
-        margin: 0;
-        font-size: 3em;
-    }
-}
