Fixed Punctuation issue and no newspaper results issue
- Parsed place name html then encoded to fix punctuation for Trove API
call
- Added conditional for cases where there are no newspaper results, for
when there ARE picture results and when there ARE NO picture results.

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,12 @@ body {
     overflow: scroll;
 }
 
+/* About
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+#locError {
+	display: none;
+}
+
 
 /* Navigation
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
