--- a/css/styles.css
+++ b/css/styles.css
@@ -37,13 +37,25 @@ section {
     height: 100%;
     width: 100%; }
 
+h2 {
+    text-align: center;
+    color: #303030;
+    font-size: 1.2em;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 0.07em;
+    margin-bottom: 1.5em; }
+
+h3 {
+    font-size: 1.1em;
+    font-weight: 400;
+    letter-spacing: 0.02em; }
+
 .hide {
-    display: none;
-/*     opacity: 0; */ }
+    display: none;}
     
 .show {
-    display: block;
-/*     opacity: 1; */ }
+    display: block; }
 
 /* quick way of centering divs holding content to be centered */
 .center {
@@ -59,15 +71,16 @@ button,
     text-transform: uppercase;
     color: #619741;
     background-color: #fff;
-    border: #619741 2px solid;
+    border: #619741 2.5px solid;
     font-size: 1.5rem;
     letter-spacing: 2px;
     width: 80%;
     height: 7rem;
     margin: 0 auto;
     display: block;
-    font-weight: 400; }
-
+    font-weight: 400;
+    transition: all .3s ease; }
+    	    	    
 .bold {
 	font-weight: 400; }
 	
@@ -80,90 +93,76 @@ a {
 
 #intro {
     background-color: rgba(97,151,65,1);
-    color: #fff;
-}
+    color: #fff; }
 
-#intro-row {
-    position: relative;
-}
-
-#intro-centre {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-}
-
-#intro-centre:after {
-    content: url(../images/Handdrawn/Launch-explosion-white.svg);
-    position: absolute;
-    opacity: 0.15;
-    width: 90%;
-    max-width: 390px;
-    min-width: 280px;
-    top: 30%;
-    left: 46%;
-    transform: translate(-50%,-50%);
-}
+	#intro-row {
+	    position: relative; }
+	
+	#intro-centre {
+	    position: absolute;
+	    top: 50%;
+	    left: 50%;
+	    transform: translate(-50%,-50%); }
+	
+		#intro-centre:after {
+		    content: url(../images/Handdrawn/Launch-explosion-white.svg);
+		    position: absolute;
+		    opacity: 0.15;
+		    width: 90%;
+		    max-width: 390px;
+		    min-width: 280px;
+		    top: 30%;
+		    left: 46%;
+		    transform: translate(-50%,-50%); }
 
 #logo img {
     width: 50%;
     min-width: 200px;
-    max-width: 300px;
-}
+    max-width: 300px; }
 
 #powered {
     width: 10%;
     min-width: 80px;
-    max-width: 150px;
-}
+    max-width: 150px; }
 
 
 /* Onboarding
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 #onboard {
-    position: relative;
-}
+    position: relative; }
 
-#onboard-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-}
-
-#onboard-row img {
-    width: 70%;
-    max-width: 300px;
-}
-
-#onboard-row p {
-    text-align: left;
-    width: 85%;
-}
-
-    #onboard-row p:first-of-type {
-        margin: 4rem auto 2rem;
-    }
-
-    #onboard-row p:last-of-type {
-        margin: 0 auto 4rem;
-    }
+	#onboard-container {
+	    position: absolute;
+	    top: 50%;
+	    left: 50%;
+	    transform: translate(-50%,-50%); }
+	
+	#onboard-row img {
+	    width: 70%;
+	    max-width: 300px; }
+	
+	#onboard-row p {
+	    text-align: left;
+	    width: 85%; }
+	
+	    #onboard-row p:first-of-type {
+	        margin: 4rem auto 2rem; }
+	
+	    #onboard-row p:last-of-type {
+	        margin: 0 auto 4rem; }
 
 #got-it:after {
     content: url(../images/handdrawn/curved-arrow-up.svg);
     position: absolute;
     width: 5rem;
     top: 88%;
-    left: 75%;
-}
+    left: 75%; }
 
 @media screen and (min-width: 550px) {
     #got-it:after {
         top: 90%;
-        left: 63%;
-    }
+        left: 63%; }
 }
 
 #disclaimer {
@@ -173,10 +172,7 @@ a {
     height: 100vh;
     position: fixed;
     top: 0;
-    overflow: scroll;
-}
-
-
+    overflow: scroll; }
 
 
 /* Home
@@ -298,94 +294,95 @@ a {
     height: 100vh;
     width: 100vw;
     background-color: #fff;
-    text-align: center;
-}
-    #compass {
-        display: inline;
-    }
-        #compassBase {
-            position: absolute;
-            height: 10rem;
-            width: 10rem;
-            margin-top: 10rem;
-        }
-        #compassNeedle {
-            height: 10rem;
-            width: 10rem;
-            margin-top: 10rem;
-            -webkit-animation: compassSpin 5s linear infinite;
-            -moz-animation: compassSpin 5s linear infinite;
-            animation: compassSpin 5s linear infinite;
-            -webkit-transform-origin: 50% 50%;
-            -moz-transform-origin: 50% 50%;
-            transform-origin: 50% 50%;
-        }
+    text-align: center; }
+    
+#compass {
+    display: inline; }
+   
+    #compassBase {
+        position: absolute;
+        height: 10rem;
+        width: 10rem; }
+        
+    #compassNeedle {
+        height: 10rem;
+        width: 10rem;
+        -webkit-animation: compassSpin 5s linear infinite;
+        -moz-animation: compassSpin 5s linear infinite;
+        animation: compassSpin 5s linear infinite;
+        -webkit-transform-origin: 50% 50%;
+        -moz-transform-origin: 50% 50%;
+        transform-origin: 50% 50%; }
 
-            @-webkit-keyframes compassSpin {
-                0%   { -webkit-transform: rotate(0deg); }
-                20%  { -webkit-transform: rotate(-60deg); }
-                40%  { -webkit-transform: rotate(20deg); }
-                60%  { -webkit-transform: rotate(-40deg); }
-                80%  { -webkit-transform: rotate(40deg); }
-                100% { -webkit-transform: rotate(0deg); }
-            }
-            @-moz-keyframes compassSpin {
-                0%   { -moz-transform: rotate(0deg); }
-                20%  { -moz-transform: rotate(-60deg); }
-                40%  { -moz-transform: rotate(20deg); }
-                60%  { -moz-transform: rotate(-40deg); }
-                80%  { -moz-transform: rotate(40deg); }
-                100% { -moz-transform: rotate(0deg); }
-            }
-            @keyframes compassSpin {
-                0%   { transform: rotate(0deg); }
-                20%  { transform: rotate(-60deg); }
-                40%  { transform: rotate(20deg); }
-                60%  { transform: rotate(-40deg); }
-                80%  { transform: rotate(40deg); }
-                100% { transform: rotate(0deg); }
-            }
-        #findPlacesLoadingText {
-            margin-top: 2rem;
+        @-webkit-keyframes compassSpin {
+            0%   { -webkit-transform: rotate(0deg); }
+            20%  { -webkit-transform: rotate(-60deg); }
+            40%  { -webkit-transform: rotate(20deg); }
+            60%  { -webkit-transform: rotate(-40deg); }
+            80%  { -webkit-transform: rotate(40deg); }
+            100% { -webkit-transform: rotate(0deg); }
         }
-    #discoveringGuy {
-            height: 10rem;
-            width: 100%;
-            margin-top: 10rem;
-            -webkit-animation: discoverSway 5s linear infinite;
-            -moz-animation: discoverSway 5s linear infinite;
-            animation: discoverSway 5s linear infinite;
-            -webkit-transform-origin: 50% 100%;
-            -moz-transform-origin: 50% 100%;
-            transform-origin: 50% 100%;
+        @-moz-keyframes compassSpin {
+            0%   { -moz-transform: rotate(0deg); }
+            20%  { -moz-transform: rotate(-60deg); }
+            40%  { -moz-transform: rotate(20deg); }
+            60%  { -moz-transform: rotate(-40deg); }
+            80%  { -moz-transform: rotate(40deg); }
+            100% { -moz-transform: rotate(0deg); }
         }
-            @-webkit-keyframes discoverSway {
-                0%   { -webkit-transform: rotate(0deg); }
-                25%  { -webkit-transform: rotate(-25deg); }
-                50%  { -webkit-transform: rotate(0deg); }
-                75%  { -webkit-transform: rotate(25deg); }
-                100% { -webkit-transform: rotate(0deg); }
-            }
-            @-moz-keyframes discoverSway {
-                0%   { -moz-transform: rotate(0deg); }
-                25%  { -moz-transform: rotate(-25deg); }
-                50%  { -moz-transform: rotate(0deg); }
-                75%  { -moz-transform: rotate(25deg); }
-                100% { -moz-transform: rotate(0deg); }
-            }
-            @keyframes discoverSway {
-                0%   { transform: rotate(0deg); }
-                25%  { transform: rotate(-25deg); }
-                50%  { transform: rotate(0deg); }
-                75%  { transform: rotate(25deg); }
-                100% { transform: rotate(0deg); }
-            }
-    #load-artefacts {
-        margin-top: 2rem;
+        @keyframes compassSpin {
+            0%   { transform: rotate(0deg); }
+            20%  { transform: rotate(-60deg); }
+            40%  { transform: rotate(20deg); }
+            60%  { transform: rotate(-40deg); }
+            80%  { transform: rotate(40deg); }
+            100% { transform: rotate(0deg); }
+        }
+        
+#find-places-load {
+    margin-top: 2rem;
+    font-weight: 500; }
+        
+#discoveringGuy {
+    height: 10rem;
+    width: 100%;
+    -webkit-animation: discoverSway 5s linear infinite;
+    -moz-animation: discoverSway 5s linear infinite;
+    animation: discoverSway 5s linear infinite;
+    -webkit-transform-origin: 50% 100%;
+    -moz-transform-origin: 50% 100%;
+    transform-origin: 50% 100%; }
+    
+    @-webkit-keyframes discoverSway {
+        0%   { -webkit-transform: rotate(0deg); }
+        25%  { -webkit-transform: rotate(-25deg); }
+        50%  { -webkit-transform: rotate(0deg); }
+        75%  { -webkit-transform: rotate(25deg); }
+        100% { -webkit-transform: rotate(0deg); }
+		}
+		
+    @-moz-keyframes discoverSway {
+        0%   { -moz-transform: rotate(0deg); }
+        25%  { -moz-transform: rotate(-25deg); }
+        50%  { -moz-transform: rotate(0deg); }
+        75%  { -moz-transform: rotate(25deg); }
+        100% { -moz-transform: rotate(0deg); }
     }
-        #loadingPlace {
-            font-weight: 600; 
-        }
+    
+    @keyframes discoverSway {
+        0%   { transform: rotate(0deg); }
+        25%  { transform: rotate(-25deg); }
+        50%  { transform: rotate(0deg); }
+        75%  { transform: rotate(25deg); }
+        100% { transform: rotate(0deg); }
+    }
+        
+#load-artefacts {
+    margin-top: 2rem;
+    font-weight: 400; }
+    
+#loading-place {
+    font-weight: 600; }
 
 
 
@@ -394,41 +391,52 @@ a {
 
 .place {
     cursor: pointer;
-    margin-bottom: 1rem;
-}
-
+    margin-bottom: 1rem; }
+    
     .place:hover {
-        background-color: lightgray;
-    }
+	    color: #fff;
+	    background-color: rgba(97,151,65,1); }
 
 
 /*  Results
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-.results {
+.result {
     cursor: pointer;
-}
-    .results:hover {
-        background-color: lightgray;
-    }
-
-h2 {
-    text-align: center;
-    color: #303030;
-    font-size: 1.3em;
-    font-weight: 500;
-    text-transform: uppercase;
-    letter-spacing: 0.07em;
-    margin-bottom: 1.5em; }
-
-h3 {
-    font-size: 1.1em;
-    font-weight: 400;
-    letter-spacing: 0.02em; }
-
-.results-img {
-    max-width: 100%;
-}
+    position: relative;
+    margin: 0;
+	padding: 0;  }
+    
+	.result-img {
+	    background-size: cover;
+	    width: 100%;
+	    height: 200px;
+	    overflow: hidden;
+	    margin: 0;
+	    padding: 0; }
+	    
+    .result-title {
+	    text-transform: uppercase;
+	    text-align: left;
+	    font-size: .9em;
+	    color: #fff;
+	    letter-spacing: 0.03em;
+	    width: 100%;
+	    background-color: rgba(48,48,48,0.85);
+	    padding: 10px 20px;
+	    position: absolute;
+	    bottom: -15px;
+	    font-weight: 500; }
+    
+    #place-name {
+	    display: inline-block; }
+	    
+	.marker {
+		width: 18px;
+		padding-right: 5px;
+		display: inline-block;
+		vertical-align: bottom;
+		margin-bottom: 1.85em; }
 
 .newsArticle {
     display: inline-block;
@@ -439,21 +447,18 @@ h3 {
     padding: 2rem;
     font-family: 'Merriweather', serif;
     font-weight: 400;
-    text-align: justify;
-}
+    text-align: justify; }
 
-.newsArticleHead {
-    margin-top: 0;
-    font-weight: 700;
-    text-align: center;
-    font-size: 1.5em;
-}
-
-        .newsArticle p:first-of-type {
-            text-align: center;
-            font-size: 1.2em;
-            font-style: italic;
-        }
+	.newsArticleHead {
+	    margin-top: 0;
+	    font-weight: 700;
+	    text-align: center;
+	    font-size: 1.5em; }
+	
+    .newsArticle p:first-of-type {
+        text-align: center;
+        font-size: 1.2em;
+        font-style: italic; }
 
 
 /*  Individual Artifacts
