--- a/css/styles.css
+++ b/css/styles.css
@@ -407,11 +407,13 @@ a {
     margin: 0;
 	padding: 0;  }
     
+    .img-wrap {
+	    height: 200px;
+	    overflow: hidden; }
+	    
 	.result-img {
 	    background-size: cover;
 	    width: 100%;
-	    height: 200px;
-	    overflow: hidden;
 	    margin: 0;
 	    padding: 0; }
 	    
