--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
     Loading
     Select place
     Results
+    Location error (oops)
     Individual artefacts
 
 */
@@ -44,7 +45,7 @@ h2 {
     font-weight: 500;
     text-transform: uppercase;
     letter-spacing: 0.07em;
-    margin-bottom: 1.5em; }
+    margin-bottom: 2em; }
 
 h3 {
     font-size: 1.1em;
@@ -52,7 +53,7 @@ h3 {
     letter-spacing: 0.02em; }
 
 .hide {
-    display: none;}
+    display: none; }
     
 .show {
     display: block; }
@@ -80,12 +81,23 @@ button,
     display: block;
     font-weight: 400;
     transition: all .3s ease; }
+
+    button:hover,
+    .button:hover {
+	    color: #fff;
+	    background-color: rgba(97,151,65,1); }
     	    	    
 .bold {
 	font-weight: 400; }
 	
 a {
 	color: rgba(97,151,65,1); }
+
+@media screen and (min-width: 550px) {
+    h2 {
+        margin-bottom: 3em;
+    }
+}
 
 
 /* Launch
@@ -182,20 +194,27 @@ a {
 	margin-bottom: 2rem; }
 	
 	.icons {
-		display: inline-block;
 		left: 50%;
 		transform: translateX(-50%);
 		position: relative;
-		width: 70%;
-		vertical-align: bottom; }
+		width: 90%;
+		vertical-align: bottom;
+        max-width: 300px; }
 
-	/* positioning needs to be fixed - not sure how to center it correctly */
+    #arrows-icon {
+        margin-bottom: -15%;
+    }
+
 	#location-icon {
-	    width: 7rem; 
-		transform: translateX(-150%); }
+	    width: 8rem;
+        display: block;
+        margin: 0 auto; }
 
 #find-places {
 	width: 70%; }
+
+#underline {
+    max-width: 200px; }
 
 #pointing-img {
     width: 55%;
@@ -215,13 +234,14 @@ a {
     top: 0;
     overflow: scroll;
     z-index: 10; }
-    
-    #about .afternav  {
-        width: 90%;
-	    margin: 8rem 5%; }
+
+    #about h2 {
+        margin-bottom: 4rem;
+    }
     
     #about .afternav p {
 	    margin-bottom: 3rem; }
+
 
 
 /* Navigation
@@ -232,16 +252,26 @@ a {
     width: 100%;
     background: #fff;
     height: 5.5rem;
-    top: 0; }
+    top: 0;
+    padding-top: 0.75rem; }
     
     .back-link {
         position: absolute;
         display: inline-block;
-        left: 2rem;
         font-size: 2em;
         color: #303030;
         cursor: pointer;
         font-weight: 400; }
+
+    .error,
+    .select,
+    .results, 
+    .flickr,
+    .newspaper {
+        left: 2rem; }
+
+    .about {
+        right: 2rem; }
     
     .logo {
         height: 3rem;
@@ -257,7 +287,7 @@ a {
 		font-size: 0;
 		width: 50px;
         height: 100%;
-        margin: 0 auto;
+        margin: 0.5rem auto 0;
         cursor: pointer;
         position: absolute;
         left: 50%;
@@ -276,7 +306,7 @@ a {
         text-transform: uppercase; }
 
 .afternav {
-    margin-top: 8rem; }
+    margin-top: 10rem; }
 
 .main-row {
 	margin: 0 auto;
@@ -285,12 +315,18 @@ a {
 	transform: translateY(-50%);
 	width: 100%; }
 
+@media screen and (min-width: 550px) {
+    .afternav {
+        margin-top: 13rem; }
+}
+
 
 /* Loading
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 #loading,
-#discovering {
+#discovering,
+#location-error {
     position: fixed;
     top: 0;
     z-index: 1;
@@ -308,8 +344,9 @@ a {
         width: 10rem; }
         
     #compassNeedle {
-        height: 10rem;
-        width: 10rem;
+        height: 8.5rem;
+        width: 8.5rem;
+        margin: 1rem;
         -webkit-animation: compassSpin 5s linear infinite;
         -moz-animation: compassSpin 5s linear infinite;
         animation: compassSpin 5s linear infinite;
@@ -346,46 +383,188 @@ a {
     margin-top: 2rem;
     font-weight: 500; }
         
-#discoveringGuy {
-    height: 10rem;
-    width: 100%;
-    -webkit-animation: discoverSway 5s linear infinite;
-    -moz-animation: discoverSway 5s linear infinite;
-    animation: discoverSway 5s linear infinite;
-    -webkit-transform-origin: 50% 100%;
-    -moz-transform-origin: 50% 100%;
-    transform-origin: 50% 100%; }
-    
-    @-webkit-keyframes discoverSway {
-        0%   { -webkit-transform: rotate(0deg); }
-        25%  { -webkit-transform: rotate(-25deg); }
-        50%  { -webkit-transform: rotate(0deg); }
-        75%  { -webkit-transform: rotate(25deg); }
-        100% { -webkit-transform: rotate(0deg); }
-		}
-		
-    @-moz-keyframes discoverSway {
-        0%   { -moz-transform: rotate(0deg); }
-        25%  { -moz-transform: rotate(-25deg); }
-        50%  { -moz-transform: rotate(0deg); }
-        75%  { -moz-transform: rotate(25deg); }
-        100% { -moz-transform: rotate(0deg); }
-    }
-    
-    @keyframes discoverSway {
-        0%   { transform: rotate(0deg); }
-        25%  { transform: rotate(-25deg); }
-        50%  { transform: rotate(0deg); }
-        75%  { transform: rotate(25deg); }
-        100% { transform: rotate(0deg); }
-    }
+#discovering-guy {
+    height: 10rem; }
         
 #load-artefacts {
     margin-top: 2rem;
     font-weight: 400; }
     
-#loading-place {
+#loading-place,
+#errorPlace {
     font-weight: 600; }
+
+div#top-stars,
+div#bottom-stars {
+    height: 50vh; }
+
+div#star-one {
+    margin: 10rem 0 0 -25rem; }
+
+#star1 {
+    height: 3rem;
+    -webkit-animation: glowing-star2 0.8s infinite;
+    -moz-animation: glowing-star2 0.8s infinite;
+    animation: glowing-star2 0.8s infinite; }
+
+div#star-two {
+    margin: -7rem 0 0 0; }
+
+#star2 {
+    height: 3.75rem;
+    -webkit-animation: glowing-star2 1.2s infinite;
+    -moz-animation: glowing-star2 1.2s infinite;
+    animation: glowing-star2 1.2s infinite; }
+
+div#star-three {
+    margin: 4rem 0 0 -13rem; }
+
+#star3 {
+    height: 5rem;
+    -webkit-animation: glowing-star1 1s infinite;
+    -moz-animation: glowing-star1 1s infinite;
+    animation: glowing-star1 1s infinite; }
+
+div#star-four {
+    margin: -9rem 0 0 23rem; }
+
+#star4 {
+    height: 3.5rem;
+    -webkit-animation: glowing-star2 0.6s infinite;
+    -moz-animation: glowing-star2 0.6s infinite;
+    animation: glowing-star2 0.6s infinite; }
+
+div#star-five {
+    margin: 1rem 0 0 7rem; }
+
+#star5 {
+    height: 2.8rem;
+    -webkit-animation: glowing-star1 0.8s infinite;
+    -moz-animation: glowing-star1 0.8s infinite;
+    animation: glowing-star1 0.8s infinite; }
+
+div#star-six {
+    margin: 2rem 0 0 21rem; }
+
+#star6 {
+    height: 2.75rem;
+    -webkit-animation: glowing-star1 1.2s infinite;
+    -moz-animation: glowing-star1 1.2s infinite;
+    animation: glowing-star1 1.2s infinite; }
+
+div#star-seven {
+    margin: -2rem 0 0 -23rem; }
+
+#star7 {
+    height: 3rem;
+    -webkit-animation: glowing-star2 0.5s infinite;
+    -moz-animation: glowing-star2 0.5s infinite;
+    animation: glowing-star2 0.5s infinite; }
+
+div#star-eight {
+    margin: 2rem 0 0 15rem;
+    transform: rotate(180deg); }
+
+#star8 {
+    height: 2.5rem;
+    -webkit-animation: glowing-star2 0.8s infinite;
+    -moz-animation: glowing-star2 0.8s infinite;
+    animation: glowing-star2 0.8s infinite; }
+
+div#star-nine {
+    margin: -2rem 0 0 -10rem;
+    transform: rotate(180deg); }
+
+#star9 {
+    height: 3.5rem;
+    -webkit-animation: glowing-star2 0.6s infinite;
+    -moz-animation: glowing-star2 0.6s infinite;
+    animation: glowing-star2 0.6s infinite; }
+
+div#star-ten {
+    margin: 2rem 0 0 -25rem;
+    transform: rotate(180deg); }
+
+#star10 {
+    height: 4rem;
+    -webkit-animation: glowing-star1 0.8s infinite;
+    -moz-animation: glowing-star1 0.8s infinite;
+    animation: glowing-star1 0.8s infinite; }
+
+div#star-eleven {
+    margin: -2rem 0 0 20rem;
+    transform: rotate(180deg); }
+
+#star11 {
+    height: 3.5rem;
+    -webkit-animation: glowing-star2 1s infinite;
+    -moz-animation: glowing-star2 1s infinite;
+    animation: glowing-star2 1s infinite; }
+
+div#star-twelve {
+    margin: -3rem 0 0 -5rem;
+    transform: rotate(180deg); }
+
+#star12 {
+    height: 5rem;
+    -webkit-animation: glowing-star1 0.7s infinite;
+    -moz-animation: glowing-star1 0.7s infinite;
+    animation: glowing-star1 0.7s infinite; }
+
+    /* first type of glowing star animation */
+    @-webkit-keyframes glowing-star1 {
+        0%   { -webkit-transform: scale(1); }
+        50%  { -webkit-transform: scale(0.6); }
+        100% { -webkit-transform: scale(1); }
+    }
+
+    @-moz-keyframes glowing-star1 {
+        0%   { -moz-transform: scale(1); }
+        50%  { -moz-transform: scale(0.6); }
+        100% { -moz-transform: scale(1); }
+    }
+
+    @keyframes glowing-star1 {
+        0%   { transform: scale(1); }
+        50%  { transform: scale(0.6); }
+        100% { transform: scale(1); }
+    }
+
+    /* second type of glowing star animation */
+    @-webkit-keyframes glowing-star2 {
+        0%   { -webkit-transform: scale(0.6); }
+        50%  { -webkit-transform: scale(1); }
+        100% { -webkit-transform: scale(0.6); }
+    }
+
+    @-moz-keyframes glowing-star2 {
+        0%   { -moz-transform: scale(0.6); }
+        50%  { -moz-transform: scale(1); }
+        100% { -moz-transform: scale(0.6); }
+    }
+
+    @keyframes glowing-star2 {
+        0%   { transform: scale(0.6); }
+        50%  { transform: scale(1); }
+        100% { transform: scale(0.6); }
+    }
+
+@media screen and (min-height: 750px) {
+    div#top-stars {
+        height: 30vh;
+        margin-top: 17rem; }
+    
+    div#bottom-stars {
+        margin-top: 12rem; }
+}
+
+@media screen and (min-height: 1250px) {
+    div#top-stars {
+        margin-top: 40rem; }
+    
+    div#bottom-stars {
+        margin-top: 0; }
+}
 
 
 
@@ -394,11 +573,7 @@ a {
 
 .place {
     cursor: pointer;
-    margin-bottom: 1rem; }
-    
-    .place:hover {
-	    color: #fff;
-	    background-color: rgba(97,151,65,1); }
+    margin-bottom: 2rem; }
 
 
 /*  Results
@@ -441,7 +616,7 @@ a {
 		padding-right: 5px;
 		display: inline-block;
 		vertical-align: bottom;
-		margin-bottom: 1.85em; }
+		margin-bottom: 2.5em; }
 
 .newsArticle {
     display: inline-block;
@@ -464,6 +639,30 @@ a {
         text-align: center;
         font-size: 1.2em;
         font-style: italic; }
+
+@media screen and (min-width: 550px) {
+    .img-wrap {
+        height: 300px; }
+    
+    .marker {
+        margin-bottom: 3.85em; }
+}
+
+
+/*  Location error (oops)
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+section#location-error p {
+    margin-bottom: 1rem; }
+
+img#little-guy-oops {
+    height: 10rem;
+    margin-bottom: 2rem; }
+
+@media screen and (min-width: 550px) {
+    section#location-error br {
+        display: none; }
+}
 
 
 /*  Individual Artifacts
