Small padding change

--- a/css/styles.css
+++ b/css/styles.css
@@ -306,7 +306,7 @@ a {
         text-transform: uppercase; }
 
 .afternav {
-    margin-top: 10rem; }
+    padding-top: 10rem; }
 
 .main-row {
 	margin: 0 auto;
