--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,8 @@
     Select place
     Results
     Location error (oops)
-    Individual artefacts
+    Individual artefacts - Flickr
+    Individual artefacts - Newspaper
 
 */
 
@@ -686,5 +687,52 @@ img#little-guy-oops {
 }
 
 
-/*  Individual Artifacts
+/*  Individual Artifacts - Flickr
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+div#flickr-content {
+    overflow: scroll; }
+
+img.artefact-img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    padding-top: 7rem; }
+
+div#flickr-text,
+div#flickr-text h2 {
+    text-align: left; }
+
+div#flickr-text h2 {
+    margin: 2rem 0; }
+
+p#contributor {
+    margin-bottom: 2rem; }
+
+p#desc {
+    margin-bottom: 3rem; }
+
+a.button {
+    text-decoration: none;
+    padding-top: 2rem; }
+
+img.line {
+    position: relative;
+    width: 90%;
+    margin: 0.65rem 0 7rem; }
+
+@media screen and (max-width: 550px) {
+    #img-container {
+        padding: 0;
+        width: 100%; }
+}
+
+@media screen and (min-width: 551px) {
+    img.artefact-img {
+        height: 600px;
+        padding-top: 12rem; }
+}
+
+
+/*  Individual artefacts - Newspaper
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
